post navigation fix on mobile

--- a/src/scss/components/blog/_blog.scss
+++ b/src/scss/components/blog/_blog.scss
@@ -39,7 +39,7 @@
   width: 100%;
   background: var(--color);
   display: grid;
-  grid-template-columns: 1fr 5fr;
+  grid-template-columns: 1fr 3fr;
   align-items: center;
   justify-content: flex-start;
 
@@ -60,9 +60,10 @@
     height: 100%;
     overflow: hidden;
 
-    @include card(-1); 
-    img{
-      width:auto;
+    @include card(-1);
+
+    img {
+      width: auto;
       height: 100%;
       display: block;
     }
@@ -91,15 +92,21 @@
     padding: 1rem;
     text-align: center;
     grid-column: 2;
+    font-size: 1.5em;
+
 
     // background: var( --color );
+    @include breakpoint(laptop) {
+
+      font-size: 2em;
+
+    }
 
 
   }
 
   .post__subtitle {
     margin: 0;
-    font-size: 2em;
     padding: 0.25em 1rem;
     font-style: italic;
 
@@ -107,10 +114,18 @@
     grid-column: 2;
     background-color: var(--darkerColor);
     color: var(--darker-text-color);
+    font-size: 1em;
 
 
 
     @include card(2);
+
+
+    @include breakpoint(laptop) {
+
+      font-size: 2em;
+
+    }
 
 
 
@@ -129,13 +144,13 @@
 
 
 
-.external-link__icon{
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
-  opacity: 0.5;
-  font-size: 2em;
-}
+  .external-link__icon {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    opacity: 0.5;
+    font-size: 2em;
+  }
 
 
 }
@@ -146,8 +161,9 @@
   // First Blog Card In Grid
 
 
-  &--0, &--3 {
-    @include breakpoint(laptop){
+  &--0,
+  &--3 {
+    @include breakpoint(laptop) {
 
       grid-column: 1 / span 2;
       // grid-row: 1 / span 2;
@@ -155,7 +171,9 @@
 
     .blog__card {
 
-      grid-template-columns: 1fr;      min-height: 50vh;
+      grid-template-columns: 1fr;
+      min-height: 50vh;
+
       @include breakpoint(laptop) {
         grid-template-columns: auto 1fr;
 
@@ -163,7 +181,7 @@
       }
 
 
-      
+
 
       .post__title {
         @include breakpoint(laptop) {
@@ -184,7 +202,7 @@
   }
 
 
-  &--external{
+  &--external {
 
     position: relative;
   }
@@ -196,7 +214,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  width: 100%; 
+  width: 100%;
 
   h2 {
     margin-bottom: 0.5em;
@@ -210,22 +228,23 @@
   }
 
 
-  ul{
+  ul {
     max-width: 80%;
-    
-    @include breakpoint(laptop){
-      
+
+    @include breakpoint(laptop) {
+
       max-width: 40%;
 
     }
   }
+
   .gatsby-highlight {
     max-width: 80%;
     width: 100%;
     margin: 0 auto 1.5em;
 
-    @include breakpoint(laptop){
-      
+    @include breakpoint(laptop) {
+
       max-width: 40%;
 
     }
@@ -234,27 +253,52 @@
   .gatsby-resp-image-wrapper {
 
     width: 100%;
-    max-width: 100vw!important;
+    max-width: 100vw !important;
     margin: 0 auto 1.5em;
 
   }
 }
 
 
-nav.postNavigation{
+nav.postNavigation {
 
-  width: 65%;
+  width: 95%;
   color: #fff;
   margin: 1em auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-h3{
-  text-align: center;
-}
+  h3,
+  .title {
+    text-align: center;
+    color: #fff;
+    grid-row: 1;
+    grid-column: 1 / span 2;
 
-  li{
+    @include breakpoint(laptop){
+      grid-column: 2;
+    }
+  }
+
+  ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto;
+    grid-gap: 1em;
+    list-style: none;
     margin: 0;
-    
-    a{
+    padding: 0;
+
+    @include breakpoint(laptop){
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+
+  li {
+    margin: 0;
+
+    a {
       background: var(--color);
       text: var(--text-color);
       color: inherit;
@@ -263,12 +307,13 @@ h3{
       align-items: center;
       justify-content: center;
 
-      svg{
+      svg {
         font-size: 1.5em;
         margin: 0 0.25em;
       }
     }
-    h3{
+
+    h3 {
       margin: 0;
     }
   }
